tests/invalid/invalid-016.inox
Module Invalid016

Main() :
    var X := True and 10
;
